# ABChw2

ABChw2/: CMakeLists.txt  container.cpp  container.h  main.cpp  parallelepiped.cpp  parallelepiped.h  shape.cpp  shape.h  sphere.cpp  sphere.h  tetrahedron.cpp  tetrahedron.h
ABChw2/report/: Report
ABChw2/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
